Services/nodeport_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-service
spec:
  type: NodePort
  selector:
    greeting: hello
  ports:
  - port: 60000
    targetPort: 8081
