Services/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    # kubernetes.io/ingress.class: azure/application-gateway
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /awesome
        pathType: Prefix
        backend:
          service:
            name: go-service
            port:
              number: 60000
